# mac_maker

./: .bandit  .bandit.rc  .darglint  .gitignore  .pydocstyle  .pydocstyle.tests  .readthedocs.yml  .style.yapf  .travis.yml  .yamllint.yml  .yapfignore  README.md  bitrise.yml  build.spec  container  docker-compose.yml  entrypoint.py  pyproject.toml  pytest.ini  testing_shim
.cookiecutter/: cookiecutter.json
.github/: dependabot.yml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/markdown/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: build_container.sh  changelog.sh  cli_test.sh  notifications.sh  patch_pep.sh  pushed_commit_range.sh  release_docker.sh  release_pypi.sh  setup.sh  shellcheck.sh  upload_asset.sh
.github/workflows/: push.yml  push_wheel.yml  release_container.yml  release_pypi.yml
assets/: .bash_customize  Dockerfile  cli.yml  local.env
documentation/: requirements.txt
documentation/source/: conf.py  index.rst  spelling_wordlist.txt
documentation/source/codebase/: codebase.rst
documentation/source/codebase/mac_maker/: config.rst  mac_maker.rst
documentation/source/project/: 0.overview.md  0.python.rst  2.cli.rst  2.usage.rst  3.cli.rst  3.cli_reference.rst  3.profiles.rst  4.spec_files.rst  5.build.rst  5.spec_files.rst  6.build.rst  7.readme.rst  license.rst
documentation/source/project/profiles/: env.yml.spec.rst
documentation/source/project/spec/: spec.json.spec.rst
mac_maker/: app.py  cli.py  config.py  conftest.py  container_init.sh  jobs.py
mac_maker/__helpers__/: logs.py  parameters.py  parametrize.py
mac_maker/ansible_controller/: __init__.py  environment.py  exceptions.py  interpreter.py  inventory.py  process.py  runner.py  spec.py
mac_maker/ansible_controller/tests/: conftest.py  test_environment.py  test_interpreter.py  test_inventory.py  test_process.py  test_runner.py
mac_maker/commands/: version.py
mac_maker/commands/tests/: test_version.py
mac_maker/jobs/: __init__.py  bases.py  filesystem.py  filesystem_job.py  folder.py  github.py  github_job.py  spec.py  spec_file.py  version.py
mac_maker/jobs/bases/: provisioner.py  simple.py
mac_maker/jobs/bases/tests/: conftest.py  test_provisioner.py
mac_maker/jobs/tests/: conftest.py  test_bases.py  test_filesystem_job.py  test_folder.py  test_github.py  test_github_job.py  test_spec_file.py  test_spec_file_job.py  test_version.py
mac_maker/profile/: __init__.py  filesystem.py
mac_maker/profile/precheck/: __init__.py  exceptions.py  precheck_extractor.py  precheck_validator.py
mac_maker/profile/precheck/tests/: conftest.py  test_precheck_extractor.py  test_precheck_validator.py
mac_maker/profile/spec_file/: __init__.py  exceptions.py  spec_file_extractor.py  spec_file_validator.py
mac_maker/profile/spec_file/tests/: conftest.py  test_spec_file.py  test_spec_file_extractor.py  test_spec_file_validator.py
mac_maker/profile/tests/: conftest.py  test_filesystem.py  test_profile.py
mac_maker/schemas/: env_v1.json  job_v1.json  spec_file_v1.json
mac_maker/tests/: conftest.py  test_app.py  test_cli.py  test_cli_shell_interrupt.py  test_jobs.py
mac_maker/tests/fixtures/: fixtures_git.py  fixtures_spec.py  mock_v1_invalid_job_spec.json  mock_v1_spec_file.json
mac_maker/utilities/: __init__.py  cli.py  decorators.py  exceptions.py  filesystem.py  github.py  logger.py  password.py  precheck.py  shell.py  spec.py  state.py  sudo.py  workspace.py
mac_maker/utilities/mixins/: json_file.py  text_file.py
mac_maker/utilities/mixins/tests/: test_json_file.py  test_text_file.py
mac_maker/utilities/tests/: conftest.py  test_cli.py  test_filesystem.py  test_github.py  test_logger.py  test_password.py  test_precheck.py  test_shell.py  test_spec.py  test_state.py  test_sudo.py  test_workspace.py
mac_maker/utilities/tests/fixtures/: mock_env.yml
mac_maker/utilities/validation/: precheck.py  spec.py
mac_maker/utilities/validation/tests/: test_precheck.py  test_spec.py
patches/: pep.patch
scripts/: bitrise.sh  build.sh  extras.sh  release.sh
scripts/hooks/: pre-commit
scripts/travis/: workflow.sh
