
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.coverage]

    [tool.coverage.report]
      exclude_lines = ["nocover"]
      ignore_errors = true
      precision = 1
      show_missing = true

    [tool.coverage.run]
      branch = true
      omit = ["*/test*", "setup.py"]
      source = ["."]

  [tool.isort]
    default_section = "FIRSTPARTY"
    include_trailing_comma = true
    indent = "    "
    length_sort = false
    line_length = 80
    multi_line_output = 3
    no_lines_before = "LOCALFOLDER"
    sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
    skip_glob = "*_pb2.py"

  [tool.mypy]
    ignore_missing_imports = false

    [[tool.mypy.overrides]]
      ignore_missing_imports = true
      module = ["click_shell.*", "jsonschema.*", "parameterized"]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    classifiers = ["Environment :: MacOS X", "Intended Audience :: End Users/Desktop", "Topic :: System :: Installation/Setup", "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)", "Environment :: MacOS X", "Programming Language :: Python :: 3.8"]
    description = "Ansible based provisioner for OSX machines."
    documentation = "https://github.com/osx-provisioner/mac_maker/README.md"
    exclude = ["**/tests/*", "**/*.sh"]
    homepage = "https://github.com/osx-provisioner/mac_maker"
    include = ["mac_maker/data/*"]
    keywords = ["osx", "mac"]
    license = "MPL-2.0"
    name = "mac_maker"
    readme = "README.md"
    repository = "https://github.com/osx-provisioner/mac_maker"
    version = "0.0.7"

    [tool.poetry.dependencies]
      PyYAML = "^6.0.0"
      ansible = "^9.0.0"
      click = ">=8.0.0,<9.0.0"
      click_shell = "^2.1.0"
      cryptography = ">=41.0.3"
      jsonschema = "^4.3.3"
      pyinstaller = "^6.5"
      python = ">=3.10.0,<3.11.0"
      requests = "^2.31.0"

      [tool.poetry.dependencies.myst_parser]
        optional = true
        version = "^2.0.0"

      [tool.poetry.dependencies.sphinx]
        optional = true
        version = "^6.0.0"

      [tool.poetry.dependencies.sphinx-autodoc-typehints]
        optional = true
        version = "^1.15.2"

      [tool.poetry.dependencies.sphinx-autopackagesummary]
        optional = true
        version = "^1.3"

      [tool.poetry.dependencies.sphinx-click]
        optional = true
        version = "^5.1.0"

      [tool.poetry.dependencies.sphinx-jsonschema]
        optional = true
        version = "^1.17.2"

      [tool.poetry.dependencies.sphinx_rtd_theme]
        optional = true
        version = "^1.0.0"

      [tool.poetry.dependencies.sphinxcontrib-spelling]
        optional = true
        version = "^8.0.0"

    [tool.poetry.dev-dependencies]
      darglint = "^1.8.1"
      parameterized = "^0.8.1"
      pydocstyle = "^6.1.1"
      types-PyYAML = "^6.0.1"
      types-pkg-resources = "^0.1.3"
      types-requests = "^2.26.3"

      [tool.poetry.dev-dependencies.pib_cli]
        extras = ["types"]
        version = "0.1.4"

    [tool.poetry.extras]
      docs = ["myst_parser", "sphinx", "sphinx-autopackagesummary", "sphinx-autodoc-typehints", "sphinx-click", "sphinx-jsonschema", "sphinxcontrib-spelling", "sphinx-rtd-theme"]

    [[tool.poetry.packages]]
      include = "mac_maker"

    [tool.poetry.scripts]
      mac_maker = "mac_maker.app:main"

  [tool.pylint]

    [tool.pylint.basic]
      argument-rgx = "[a-z_][a-z0-9_]{2,30}$|^pk$|^_+$"
      attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
      bad-functions = "map,filter,apply,input"
      bad-names = "foo,bar,baz,toto,tutu,tata"
      class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
      class-rgx = "[A-Z_][a-zA-Z0-9]+$"
      const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$|^urls$|^app$|^User$|^router$"
      docstring-min-length = "-1"
      function-rgx = "[A-Za-z_][A-Za-z0-9_]{2,40}$"
      good-names = "i,j,k,ex,Run,_"
      inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
      method-rgx = "[A-Za-z_][A-Za-z0-9_]{2,50}$"
      module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
      no-docstring-rgx = ".*"
      required-attributes = []
      variable-rgx = "[a-z_][a-z0-9_]{2,30}$|^pk$"

    [tool.pylint.classes]
      defining-attr-methods = "__init__,__new__,setUp"
      ignore-iface-methods = "isImplementedBy,deferred,extends,names,namesAndDescriptions,queryDescriptionFor,getBases,getDescriptionFor,getDoc,getName,getTaggedValue,getTaggedValueTags,isEqualOrExtendedBy,setTaggedValue,isImplementedByInstancesOf,adaptWith,is_implemented_by"
      valid-classmethod-first-arg = "cls"
      valid-metaclass-classmethod-first-arg = "mcs"

    [tool.pylint.design]
      ignored-argument-names = "_.*"
      max-args = 5
      max-attributes = 7
      max-branches = 12
      max-locals = 15
      max-parents = 10
      max-public-methods = 200
      max-returns = 6
      max-statements = 50
      min-public-methods = 2

    [tool.pylint.exceptions]
      overgeneral-exceptions = "Exception"

    [tool.pylint.format]
      ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
      indent-string = "  "
      max-line-length = 80
      max-module-lines = 1000
      no-space-check = "trailing-comma,dict-separator"
      single-line-if-stmt = "no"

    [tool.pylint.imports]
      deprecated-modules = "regsub,TERMIOS,Bastion,rexec"
      ext-import-graph = ""
      import-graph = ""
      int-import-graph = ""

    [tool.pylint.master]
      ignore = ""
      ignore-patterns = ".*_pb2.py"
      load-plugins = ""
      persistent = "yes"
      profile = "no"

    [tool.pylint.message_control]
      disable = "locally-disabled,fixme,too-few-public-methods,C0411,R0201"

    [tool.pylint.miscellaneous]
      notes = "FIXME,XXX,TODO"

    [tool.pylint.reports]
      comment = "no"
      evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
      files-output = "no"
      output-format = "text"
      reports = "no"

    [tool.pylint.similarities]
      ignore-comments = "yes"
      ignore-docstrings = "yes"
      ignore-imports = "no"
      min-similarity-lines = 4

    [tool.pylint.typecheck]
      generated-members = "REQUEST,acl_users,aq_parent"
      ignored-classes = "SQLObject"
      zope = "no"

    [tool.pylint.variables]
      additional-builtins = ""
      dummy-variables-rgx = "_$|dummy"
      init-import = "no"

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["mac_maker"]
